# CPU-Capability-Dispatcher

./: .gitignore  .gitmodules  CMakeLists.txt  Dispatcher.h  README.md  main.cpp
array/: CMakeLists.txt
array/include/: array_interface.h
avx/: CMakeLists.txt  avx_interface.h  impl.cpp  interface.h
cpu/: CMakeLists.txt  impl.cpp  interface.h
